--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
+/* 
+.Colores{
+      MainClr: #5da8a0;
+      SecClr: #607123;
+      TxtClrLight: #f2f0ec;
+      TxtClrDark: #373737;
+      BgClrLight: #f4f4ea;
+      BgClrDark: #2d6b22;
+      AccentClr:#577235;
+
+} */
+
+
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-size: calc(10px + 3vmin);
+  background: #fdf9c4;
+  color: #1f3c06;
 }
