--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
+*,
+*::before,
+*::after {
+   box-sizing: border-box;
+   margin: 0;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Luckiest Guy', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -8,6 +13,6 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: 'Luckiest Guy', source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
